# dgl_client

./: .gitignore  api_cli.py  pyproject.toml
dgl_client/: __init__.py  api_cli.py  main.py  main2.py  utils.py
dgl_client/commands/: chat.py  collections.py  ls.py  utils.py
