[project]
name = "dgl_client"
dynamic = ["version", "description"]
authors = [
    { name = "Mario Ceresa", email = "mario.ceresa@ec.europa.eu" }
]
dependencies = [

]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]